--- a/components/blog-post-card.css
+++ b/components/blog-post-card.css
@@ -84,15 +84,32 @@
   font-style: normal;
   font-weight: 500;
 }
+.blog-post-card-root-class-name {
+  background-image: linear-gradient(to right, #FFFFFF 98%, #219EAE 100%);
+}
+
+.blog-post-card-root-class-name3 {
+  background-image: linear-gradient(to right, #FFFFFF 98%, #219EAE 100%);
+}
 
 
 
 
 
-
-
-
-
+.blog-post-card-root-class-name11 {
+  background-image: linear-gradient(to right, #FFFFFF 98%, #219EAE 100%);
+}
+@media(max-width: 1600px) {
+  .blog-post-card-root-class-name {
+    background-image: linear-gradient(to right, #FFFFFF 98%, #219EAE 100%);
+  }
+  .blog-post-card-root-class-name3 {
+    background-image: linear-gradient(to right, #FFFFFF 98%, #219EAE 100%);
+  }
+  .blog-post-card-root-class-name11 {
+    background-image: linear-gradient(to right, #FFFFFF 98%, #219EAE 100%);
+  }
+}
 @media(max-width: 991px) {
   .blog-post-card-blog-post-card {
     flex-direction: row;
@@ -101,13 +118,31 @@
 }
 @media(max-width: 767px) {
   .blog-post-card-blog-post-card {
+    width: auto;
+    max-width: auto;
     flex-direction: column;
   }
   .blog-post-card-image {
-    width: 100%;
+    width: auto;
+    height: 100%;
+    max-width: auto;
+    align-self: center;
   }
 }
 @media(max-width: 479px) {
+  .blog-post-card-blog-post-card {
+    width: auto;
+    max-width: 100%;
+    min-width: auto;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .blog-post-card-image {
+    height: auto;
+    max-width: 100%;
+    align-self: center;
+  }
   .blog-post-card-container2 {
     padding-left: 0px;
     padding-right: 0px;
